udemy-course/sec12-ingress/03-path-based-routing/03-home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-deploy
spec:
  selector:
    matchLabels:
      app: home-app
  replicas: 3
  template:
    metadata:
      labels:
        app: home-app
    spec: 
      terminationGracePeriodSeconds: 1
      containers: 
      - name: home
        image: vinsdocker/k8s-ingress-home
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: home-service
spec:
  selector:
    app: home-app
  ports:
  - name: web-port
    port: 80
    targetPort: 80
